syntax = "proto3";

package greet;

option java_package = "com.proto.greet";
option java_multiple_files = true;

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

message GreatRequest {
  Greeting greeting = 1;
}

message GreatResponse {
  string result = 1;
}

service GreetService {
  //Unary
  rpc Greet(GreatRequest) returns (GreatResponse) {};
}




